cmake_minimum_required(VERSION 3.9)
project(CodeInterview)

set(CMAKE_CXX_STANDARD 11)

add_executable(CodeInterview main.cpp head.h Find.cpp replaceSpace.cpp printListFromTailToHead.cpp reConstructBinaryTree.cpp queueByStack.cpp minNumberInRotateArray.cpp Fibonacci.cpp jumpFloor.cpp jumpFloorII.cpp rectCover.cpp Power.cpp reOrderArray.cpp FindKthToTail.cpp ReverseList.cpp Merge.cpp HasSubtree.cpp buildTree.h Mirror.cpp printMatrix.cpp)